// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal.projects.contributors fetches contributors filtered by project, step 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyNw==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNTIy",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNQ==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 7,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors filtered by project, step, user type, vip 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMg==",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 3,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors on debate project 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 6,
            },
            "id": "VXNlcjp1c2VySWFu",
            "userType": null,
            "vip": false,
            "votes": Object {
              "totalCount": 1,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyVmluY2VudA==",
            "userType": null,
            "vip": false,
            "votes": Object {
              "totalCount": 1,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 0,
            },
            "id": "VXNlcjp1c2VyTWlja2FlbA==",
            "userType": null,
            "vip": false,
            "votes": Object {
              "totalCount": 1,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyQWd1aQ==",
            "userType": null,
            "vip": false,
            "votes": Object {
              "totalCount": 1,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 3,
            },
            "id": "VXNlcjp1c2VySnBlYw==",
            "userType": null,
            "vip": false,
            "votes": Object {
              "totalCount": 2,
            },
          },
        },
      ],
      "totalCount": 15,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Q2FubmFiaXM=",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors sorted by their activities asc 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNQ==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 1,
            },
            "id": "VXNlcjp1c2VyNTIy",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyNw==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 7,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors sorted by their activities desc 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMQ==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMg==",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 4,
            },
            "id": "VXNlcjp1c2VyQWRtaW4=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyNw==",
            "userType": Object {
              "id": "1",
            },
            "vip": false,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 7,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors that match term parameter 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 50,
            },
            "id": "VXNlcjp1c2VyMg==",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 1,
            },
          },
        },
      ],
      "totalCount": 1,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors fetches contributors that match term, step, userType, vip 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "contributions": Object {
              "totalCount": 2,
            },
            "id": "VXNlcjp1c2VyV2VsY29tYXR0aWM=",
            "userType": Object {
              "id": "1",
            },
            "vip": true,
            "votes": Object {
              "totalCount": 0,
            },
          },
        },
      ],
      "totalCount": 1,
    },
    "id": "UHJvamVjdDpwcm9qZWN0Ng==",
  },
}
`;

exports[`Internal.projects.contributors project owner checks the internal communication consent of contributors 1`] = `
Object {
  "project": Object {
    "contributors": Object {
      "edges": Array [
        Object {
          "node": Object {
            "consentInternalCommunication": false,
          },
        },
        Object {
          "node": Object {
            "consentInternalCommunication": true,
          },
        },
        Object {
          "node": Object {
            "consentInternalCommunication": true,
          },
        },
        Object {
          "node": Object {
            "consentInternalCommunication": true,
          },
        },
        Object {
          "node": Object {
            "consentInternalCommunication": true,
          },
        },
        Object {
          "node": Object {
            "consentInternalCommunication": true,
          },
        },
        Object {
          "node": Object {},
        },
      ],
    },
  },
}
`;
